Occurrence search page: selected filters are now displayed in a container, text for filters are truncated to maximum of 40 characters, bug when removing filters was fixed SearchAction: new functions that format the values for parameters: bounding box, date, basis of record and dataset. ooc_table: new style for filters container

--- a/portal-web/trunk/src/main/webapp/less/occ_table.less
+++ b/portal-web/trunk/src/main/webapp/less/occ_table.less
@@ -83,3 +83,23 @@ select.value {
 div#email-container {
   margin-bottom: 10px;
 }
+
+div.filterlist {
+  padding: 0;
+  display: block;
+  margin: 0;
+  border-width: 1px;
+  border-style:solid;  
+  border-color: #ECECEC;
+  background-color: #FFFFFF;
+  text-transform: none;    
+  font-family: "Arial", "Helvetica", sans-serif;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  max-height:200px;
+  max-width:400px;
+  width:300px; 
+  overflow-y: auto;
+  clear:both;  
+}
